Final commit of small restaurant app

--- a/small_restaurant_app.html
+++ b/small_restaurant_app.html
@@ -10,7 +10,7 @@
         <div class="entire-container">
             <div class="header">
                 <div class="restaurant-name">
-                    <h1>Happy Tummy Veg Restaurant</h1>
+                    <h1>Happy Tummy Restaurant</h1>
                 </div>
                 <div class="input-div">
                     <div class="inputs">
@@ -23,7 +23,12 @@
                     </div>
                     <div class="inputs">
                         <label for="table-number">Choose Table</label>
-                        <input type="Text" id="table-number">
+                        <select id="table-number" name="cars">
+                            <option value="1">Table 1</option>
+                            <option value="2">Table 2</option>
+                            <option value="3">Table 3</option>
+                          </select>
+                        <!-- <input type="Text" id="table-number"> -->
                     </div>   
                 </div>
                 <div class="submit-button-div">
